[package]
name = "postgres-derive"
version = "0.4.9"
authors = ["Steven Fackler <sfackler@palantir.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"
description = "An internal crate used by postgres-types"
repository = "https://github.com/rust-postgres/rust-postgres"
rust-version = "1.85"

[lib]
proc-macro = true
test = false

[dependencies]
syn = "3.0"
proc-macro2 = "1.0"
quote = "1.0"
heck = "0.5"
